# codegroove

./: .gitmodules  CMakeLists.txt  README.md
cmake/: Script.py
plugin/: CMakeLists.txt
plugin/include/codegroove/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
submodules/: submodules.txt
